# controller/communityController.go
@@ -106,3 +106,68 @@ func CreatePostHandler(c *gin.Context) {
 	}
 	response.BuildSuccessResponse(c, "ok")
 }
+
+// PostDetailHandler 帖子详情
+// @Summary 帖子详情
+// @Description 帖子详情
+// @Tags 社区
+// @Accept application/json
+// @Produce application/json
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Param id path string true "帖子 ID"
+// @Security ApiKeyAuth
+// @Success 200 {object} validator.PostDetail
+// @Router /post/{id} [get]
+func PostDetailHandler(c *gin.Context) {
+	// 校验参数 帖子 ID
+	idStr := c.Param("id")
+	id, err := strconv.ParseInt(idStr, 10, 64)
+	if err != nil {
+		zap.L().Error("PostDetailHandler strconv.ParseInt error", zap.Error(err))
+		response.BuildResponse(c, nil, response.ParamError, 400)
+		return
+	}
+	// 查询帖子详情
+	postDetail, err := CommunityService.PostDetail(id)
+	if err != nil {
+		zap.L().Error("get post detail error", zap.Error(err))
+		response.BuildResponse(c, nil, response.PostDetailError, 400)
+		return
+	}
+	// 返回帖子详情数据
+	response.BuildSuccessResponse(c, postDetail)
+}
+
+// PostListHandler 帖子列表
+// @Summary 帖子列表
+// @Description 帖子列表
+// @Tags 社区
+// @Accept application/json
+// @Produce application/json
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Param page query string false "页码"
+// @Param page_size query string false "每页大小"
+// @Security ApiKeyAuth
+// @Success 200 {object} []validator.PostDetail
+// @Router /posts [get]
+func PostListHandler(c *gin.Context) {
+	// 获取分页参数，并校验
+	pageStr := c.DefaultQuery("page", "1")
+	pageSizeStr := c.DefaultQuery("page_size", "10")
+	page, pageErr := strconv.ParseInt(pageStr, 10, 64)
+	pageSize, pageSizeErr := strconv.ParseInt(pageSizeStr, 10, 64)
+	if pageErr != nil || pageSizeErr != nil {
+		zap.L().Error("parse page or pageSize error", zap.Error(pageErr), zap.Error(pageSizeErr))
+		response.BuildResponse(c, nil, response.ParamError, 400)
+		return
+	}
+	// 获取分页数据
+	postList, err := CommunityService.PostByPage(page, pageSize)
+	if err != nil {
+		zap.L().Error("get post by page error", zap.Error(err))
+		response.BuildResponse(c, nil, response.PostListError, 400)
+		return
+	}
+	// 返回分页数据
+	response.BuildSuccessResponse(c, postList)
+}
