# router/router.go
@@ -53,5 +53,7 @@ func Setup() *gin.Engine {
 	v1.GET("/community", controller.CommunityListHandler)
 	v1.GET("/community/:id", controller.CommunityDetailHandler)
 	v1.POST("/post", controller.CreatePostHandler)
+	v1.GET("/post/:id", controller.PostDetailHandler)
+	v1.GET("/posts", controller.PostListHandler)
 	return r
 }
